# pid-boost

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
hardware/: 1N5819.spice.txt  LMG1210_TRANS.lib  ad8411a.cir  control.kicad_sch  pid-boost.kicad_pcb  pid-boost.kicad_prl  pid-boost.kicad_pro  pid-boost.kicad_sch  pid-boost.kicad_sym  sqj476.cir  sqj960ep_ps.txt  sym-lib-table
src/: CMakeLists.txt  main.c
